--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,9 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 target: serie_list
+            remember_me:
+                secret: '%kernel.secret%' # required
+                lifetime: 604800 # 1 week in seconds
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,7 +34,7 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
+    access_control: #Le plus spécifique en premier et le moins spécifique en dernier !
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/(serie|season)/add, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS }
